added switch type
